// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackModel can be initialized with a source 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TrackModel can create tiles at a given position if the index is valid 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {},
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can create tiles at a given position with a particular type 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 2,
    "curved-tile-2" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-23",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileModel {
        "direction": "left",
        "id": "id-25",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-24",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can create tiles at a given position with the default specifications 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 3,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-20",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-22",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-21",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can create tiles at the last position with a particular type 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "curved-tile-2" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      CurvedTileModel {
        "direction": "left",
        "id": "id-7",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can create tiles at the last position with the default specifications 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-6",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can create tiles replacing tiles at inexistent position 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-17",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can create tiles replacing tiles with a tile having a particular type 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 2,
    "curved-tile-2" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-13",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-14",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileModel {
        "direction": "left",
        "id": "id-16",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can create tiles replacing tiles with a tile having default specifications 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 3,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-9",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-12",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-11",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can delete tiles from the track using index at inexistent position 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
    "curved-tile-1" => 1,
    "curved-tile-enlarged-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can delete tiles from the track using index from the end 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
    "curved-tile-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can delete tiles from the track using index from the middle 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
    "curved-tile-enlarged-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can delete tiles from the track using index from the start 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "curved-tile-1" => 1,
    "curved-tile-enlarged-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can export to an object 1`] = `
[
  {
    "direction": "right",
    "ratio": 1,
    "type": "curved-tile",
  },
]
`;

exports[`TrackModel can import from an object 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-28",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can import from an object 2`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "curved-tile-1" => 2,
    "straight-tile-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      CurvedTileModel {
        "direction": "left",
        "id": "id-29",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      StraightTileModel {
        "direction": "right",
        "id": "id-30",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-31",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can notify changes through the counterStore 1`] = `[]`;

exports[`TrackModel can notify changes through the counterStore 2`] = `
[
  {
    "count": 1,
    "model": CurvedTileModel {
      "direction": "right",
      "id": "curved-tile-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    "modelId": "curved-tile-1",
  },
]
`;

exports[`TrackModel can notify changes through the counterStore 3`] = `
[
  {
    "count": 2,
    "model": CurvedTileModel {
      "direction": "right",
      "id": "curved-tile-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    "modelId": "curved-tile-1",
  },
]
`;

exports[`TrackModel can notify changes through the counterStore 4`] = `
[
  {
    "count": 1,
    "model": CurvedTileModel {
      "direction": "right",
      "id": "curved-tile-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    "modelId": "curved-tile-1",
  },
]
`;

exports[`TrackModel can notify changes through the counterStore 5`] = `[]`;

exports[`TrackModel can notify changes through the counterStore 6`] = `
[
  {
    "count": 1,
    "model": StraightTileModel {
      "direction": "right",
      "id": "straight-tile-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    "modelId": "straight-tile-1",
  },
]
`;

exports[`TrackModel can notify changes through the counterStore 7`] = `[]`;

exports[`TrackModel can notify changes through the counterStore 8`] = `
[
  {
    "count": 1,
    "model": StraightTileModel {
      "direction": "right",
      "id": "straight-tile-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    "modelId": "straight-tile-1",
  },
]
`;

exports[`TrackModel can notify changes through the modelsStore 1`] = `[]`;

exports[`TrackModel can notify changes through the modelsStore 2`] = `
[
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TrackModel can notify changes through the modelsStore 3`] = `[]`;

exports[`TrackModel can notify changes through the modelsStore 4`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TrackModel can notify changes through the modelsStore 5`] = `[]`;

exports[`TrackModel can notify changes through the modelsStore 6`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TrackModel can notify changes through the tilesStore 1`] = `
{
  "height": 0,
  "tiles": [],
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 2`] = `
{
  "height": 100,
  "tiles": [
    {
      "direction": "right",
      "id": "id-32",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-32",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 90,
          "x": -55,
          "y": 55,
        },
        "width": 100,
        "x": -55,
        "y": 0,
      },
      "rotation": 0,
      "type": "curved-tile",
      "x": 0,
      "y": 0,
    },
  ],
  "width": 100,
  "x": -55,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 3`] = `
{
  "height": 100,
  "tiles": [
    {
      "direction": "right",
      "id": "id-33",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-33",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 90,
          "x": -55,
          "y": 55,
        },
        "width": 100,
        "x": -55,
        "y": 0,
      },
      "rotation": 0,
      "type": "curved-tile",
      "x": 0,
      "y": 0,
    },
    {
      "direction": "right",
      "id": "id-32",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-32",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 90,
          "x": -55,
          "y": 55,
        },
        "output": {
          "angle": 180,
          "x": -110,
          "y": 0,
        },
        "width": 100,
        "x": -155,
        "y": 0,
      },
      "rotation": 90,
      "type": "curved-tile",
      "x": -55,
      "y": 55,
    },
  ],
  "width": 200,
  "x": -155,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 4`] = `
{
  "height": 100,
  "tiles": [
    {
      "direction": "right",
      "id": "id-32",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-32",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 100,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 90,
          "x": -55,
          "y": 55,
        },
        "width": 100,
        "x": -55,
        "y": 0,
      },
      "rotation": 0,
      "type": "curved-tile",
      "x": 0,
      "y": 0,
    },
  ],
  "width": 100,
  "x": -55,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 5`] = `
{
  "height": 110,
  "tiles": [
    {
      "direction": "right",
      "id": "id-34",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-34",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 0,
          "x": 0,
          "y": 110,
        },
        "width": 90,
        "x": -45,
        "y": 0,
      },
      "rotation": 0,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
  ],
  "width": 90,
  "x": -45,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 6`] = `
{
  "height": 0,
  "tiles": [],
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 7`] = `
{
  "height": 110,
  "tiles": [
    {
      "direction": "right",
      "id": "id-35",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-35",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 110,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 0,
          "x": 0,
          "y": 110,
        },
        "width": 90,
        "x": -45,
        "y": 0,
      },
      "rotation": 0,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
  ],
  "width": 90,
  "x": -45,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 8`] = `
{
  "height": 14.5,
  "tiles": [
    {
      "direction": "right",
      "id": "id-35",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-35",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 14.5,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 0,
          "x": 0,
          "y": 14.5,
        },
        "width": 12,
        "x": -6,
        "y": 0,
      },
      "rotation": 0,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
  ],
  "width": 12,
  "x": -6,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 9`] = `
{
  "height": 14.5,
  "tiles": [
    {
      "direction": "right",
      "id": "id-35",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-35",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 14.5,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 0,
          "x": 0,
          "y": 14.5,
        },
        "width": 12,
        "x": -6,
        "y": 0,
      },
      "rotation": 0,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
  ],
  "width": 12,
  "x": -6,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 10`] = `
{
  "height": 12,
  "tiles": [
    {
      "direction": "right",
      "id": "id-35",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-35",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 12,
        "input": {
          "angle": 90,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 90,
          "x": -14.5,
          "y": 8.878689293818311e-16,
        },
        "width": 14.5,
        "x": -14.5,
        "y": -6,
      },
      "rotation": 90,
      "type": "straight-tile",
      "x": 0,
      "y": 0,
    },
  ],
  "width": 14.5,
  "x": -14.5,
  "y": -6,
}
`;

exports[`TrackModel can notify changes through the tilesStore 11`] = `
{
  "height": 24.5,
  "tiles": [
    {
      "direction": "right",
      "id": "id-35",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-35",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 14.5,
        "input": {
          "angle": 0,
          "x": 10,
          "y": 10,
        },
        "output": {
          "angle": 0,
          "x": 10,
          "y": 24.5,
        },
        "width": 12,
        "x": 4,
        "y": 10,
      },
      "rotation": 0,
      "type": "straight-tile",
      "x": 10,
      "y": 10,
    },
  ],
  "width": 16,
  "x": 0,
  "y": 0,
}
`;

exports[`TrackModel can notify changes through the tilesStore 12`] = `
{
  "height": 24.5,
  "tiles": [
    {
      "direction": "right",
      "id": "id-35",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-35",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      "ratio": 1,
      "rect": {
        "height": 14.5,
        "input": {
          "angle": 0,
          "x": 0,
          "y": 0,
        },
        "output": {
          "angle": 0,
          "x": 0,
          "y": 14.5,
        },
        "width": 12,
        "x": -6,
        "y": 0,
      },
      "rotation": 0,
      "type": "straight-tile",
      "x": 16,
      "y": 10,
    },
  ],
  "width": 22,
  "x": 0,
  "y": 0,
}
`;

exports[`TrackModel can produce an iterator 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TrackModel can remove tiles from the track using identifier at inexistent position 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
    "curved-tile-1" => 1,
    "curved-tile-enlarged-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can remove tiles from the track using identifier from the end 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
    "curved-tile-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can remove tiles from the track using identifier from the middle 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
    "curved-tile-enlarged-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can remove tiles from the track using identifier from the start 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "curved-tile-1" => 1,
    "curved-tile-enlarged-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      CurvedTileModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
      CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel can set the specifications of the tiles 1`] = `
TrackModel {
  "builder": TrackBuilder {
    "builder": [Function],
    "delegate": [Function],
    "emit": [Function],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "options": {},
  },
  "counter": Map {
    "straight-tile-1" => 1,
  },
  "counterStore": TileCounterStore {},
  "delegate": [Function],
  "emit": [Function],
  "listens": [Function],
  "modelsStore": TileModelsStore {},
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 2,
    "barrierWidth": 1,
    "laneWidth": 10,
    "maxRatio": 4,
    "unlockRatio": false,
  },
  "tiles": TileList {
    "delegate": [Function],
    "emit": [Function],
    "list": [
      StraightTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 2,
          "barrierWidth": 1,
          "laneWidth": 10,
          "maxRatio": 4,
          "unlockRatio": false,
        },
      },
    ],
    "listens": [Function],
    "off": [Function],
    "on": [Function],
    "once": [Function],
    "specs": TileSpecifications {
      "barrierChunks": 2,
      "barrierWidth": 1,
      "laneWidth": 10,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  "tilesStore": TileListStore {},
}
`;

exports[`TrackModel implements the iteration protocol 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;
